[package]
name = "kottans_pizza_api"
version = "0.1.0"
authors = ["Anton Lempiy <lempiyada@gmail.com>"]

[dependencies]
iron = "0.5"
router = "*"
logger = "*"
env_logger = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
jsonwebtoken = "4"
serde_derive = "1"
serde = "1"
serde_json = "*"
postgres = { version = "0.15",  features = ["with-chrono", "with-uuid"] }
