[package]
name = "kottans_pizza_api"
version = "0.1.0"
authors = ["Anton Lempiy <lempiyada@gmail.com>"]

[dependencies]
iron = "0.5"
iron-cors = "0.5"
router = "0.5"
logger = "0.3"
env_logger = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
jsonwebtoken = "4"
serde_derive = "1"
serde = "1"
serde_json = "1"
postgres = { version = "0.15",  features = ["with-chrono", "with-uuid"] }
validator = "0.6"
validator_derive = "0.6"
base64 = "0.8"
mount = "0.3"
