[package]
name = "kottans_pizza_api"
version = "0.1.0"
authors = ["Anton Lempiy <lempiyada@gmail.com>"]

[dependencies]
iron = "0.5"
iron-cors = "0.6.0-rc.1"
router = "0.5"
logger = "0.3"
env_logger = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
jsonwebtoken = "4"
serde_derive = "1.0.29"
serde = "1.0.29"
serde_json = "1.0.10"
postgres = { version = "0.15",  features = ["with-chrono", "with-uuid"] }
validator = "0.6"
validator_derive = "0.6"
base64 = "0.8"
mount = "0.3"
redis = "0.8.0"
params = "0.7"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
rust_decimal = "0.7"
num-traits = "0.2"
